# Multihop-GraphRAG

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  keep_awake.yml
.streamlit/: config.toml
data/benchmark/: heldout_queries.json
data/sample_corpus/: 01_platform_overview.md  02_atlas_plant_rollout.md  03_nova_plant_rollout.md  04_orion_gateway_firmware_notice.md  05_weldvision_inspection_guide.md  06_edgeops_runbook.md  07_quality_compliance_standard.md  08_supplier_map.md  09_incident_postmortem.md  10_mercury_datalake_integration.md
docs/: architecture.md  benchmark.md  demo-script.md  deployment.md  retrieval-design.md  showcase-notes.md
graphrag_studio/: __init__.py  api.py  chunking.py  cli.py  config.py  embeddings.py  evaluation.py  extractor.py  graph_store.py  loaders.py  ranking.py  retrieval.py  schemas.py  service.py  ui_helpers.py  utils.py
scripts/: ingest_sample_corpus.py  run_benchmark.py
tests/: test_ranking.py  test_utils.py
